<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.mytestapp.ui.list.ListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_toFiltersFragment"
            app:destination="@id/filtersFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.mytestapp.ui.others.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mytestapp.ui.others.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/filtersFragment"
        android:name="com.example.mytestapp.ui.filters.FiltersActivity"
        android:label="fragment_filters"
        tools:layout="@layout/fragment_filters" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mytestapp.ui.others.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>